# secret-triage

./: .gitignore  LICENSE  README.md  pyproject.toml
secret_triage/: __init__.py  cli.py  git_scanner.py  patterns.py  remediation.py  reporter.py  scanner.py  scorer.py
