[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "secret-triage"
version = "1.0.0"
description = "Find leaked secrets with confidence scoring and remediation steps"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.7",
    "rich>=13.7.0",
]

[project.scripts]
secret-triage = "secret_triage.cli:cli"

[tool.setuptools.packages.find]
include = ["secret_triage*"]
